# automated-reddit-video-tool-gui

./: .gitignore  CMakeLists.txt  README.md  arvt.ini  changelog.txt  comment_splitter.py  comment_test_image.py  comment_to_speech.py
imgui-application/: Makefile  arvt.rc  arvt_helpers.cpp  arvt_helpers.h  arvt_logger.h  audio_data.cpp  audio_data.h  av_codecs.cpp  av_codecs.h  av_shared_info.h  build_win64.bat  helpers.cpp  helpers.h  image_data.cpp  image_data.h  imgui_helpers.h  ini_helper.cpp  ini_helper.h  main.cpp  program_data.cpp  program_data.h  video_data.cpp  video_data.h
imgui-application/imgui/: imgui_widgets.cpp
imgui-application/libs/mINI/mini/: ini.h
scripts/: comment_splitter.py  comment_test_image.py  comment_to_speech.py
tests/: ini_unittest.cpp
